implemented examples for set and get CRON expressions.

--- a/web/example1.html
+++ b/web/example1.html
@@ -6,32 +6,34 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>msCron</title>
+        <title>msCron | GET CRON</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/bootstrap.css">
     </head>
     <body>
-        <div id="cron1">TODO write content</div>
-        <button id="myButton">Tset CRON</button>
+        <div class="container">
+            <h1 class="text-center text-info">Getting the CRON Expression..!</h1>
+            <div id="cron1"></div>
+
+            <div class="row" style="padding-top: 30px;">
+                <div class="col-sm-3"><button id="myButton" class="btn btn-info">GET CRON</button></div>
+                <div class="col-sm-3"><input type="text" class="form-control" id="myCronValue"> </div>
+            </div>
+        </div>
+
 
         <script src="js/jquery.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="js/msCron.js"></script>
+        <script src="js/msCron.min.js"></script>
         <script>
-            var x = $("#cron1").msCron({
-                setCron :"0 4 5 1/23 * ? *",
-                activeTab:"DAILY"
-            });
-//            var x = $("#cron1").msCron();
-//            console.log(x);
-
+            var cron = $("#cron1").msCron();
             $(document).on("click", "#myButton", function () {
-                console.log(x);
-               
+                $("#myCronValue").val(cron.getCron);
+
             });
-            
+
 
         </script>
     </body>
