--- a/web/example1.html
+++ b/web/example1.html
@@ -10,31 +10,29 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/bootstrap.css">
+    	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     </head>
     <body>
         <div class="container">
-            <h1 class="text-center text-info">Getting the CRON Expression..!</h1>
+            <h1 class="text-center text-success">Getting the CRON Expression..!</h1>
             <div id="cron1"></div>
 
             <div class="row" style="padding-top: 30px;">
-                <div class="col-sm-3"><button id="myButton" class="btn btn-info">GET CRON</button></div>
+                <div class="col-sm-3"><button id="myButton" class="btn btn-success">GET CRON</button></div>
                 <div class="col-sm-3"><input type="text" class="form-control" id="myCronValue"> </div>
             </div>
         </div>
 
 
-        <script src="js/jquery.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/msCron.min.js"></script>
+    	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+        <script src="js/msCron.js"></script>
         <script>
             var cron = $("#cron1").msCron();
             $(document).on("click", "#myButton", function () {
                 $("#myCronValue").val(cron.getCron);
 
             });
-
-
         </script>
     </body>
 </html>
