--- a/web/example1.html
+++ b/web/example1.html
@@ -26,7 +26,7 @@ and open the template in the editor.
 
     	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-        <script src="js/msCron.js"></script>
+        <script src="js/msCron.min.js"></script>
         <script>
             var cron = $("#cron1").msCron();
             $(document).on("click", "#myButton", function () {
